@@ -56,6 +56,8 @@ variables:
     paths:
       - '.vendor'
   before_script:
+    # Try to force the underlying ruby manager to use the correct version
+    - 'echo "${MATRIX_RUBY_VERSION}" > .ruby-version && cd .. && cd -'
     - 'ruby -e "puts %(\n\n), %q(=)*80, %(\nSIMP-relevant Environment Variables:\n\n#{e=ENV.keys.grep(/^PUPPET|^SIMP|^BEAKER|MATRIX/); pad=e.map{|x| x.size}.max+1; e.map{|v| %(    * #{%(#{v}:).ljust(pad)} #{39.chr + ENV[v] + 39.chr}\n)}.join}\n),  %q(=)*80, %(\n\n)"'
     - 'declare GEM_BUNDLER_VER=(-v "~> ${BUNDLER_VERSION:-1.17.1}")'
     - 'declare GEM_INSTALL_CMD=(gem install --no-document)'
@@ -201,13 +203,6 @@ variables:
     BEAKER_PUPPET_COLLECTION: 'puppet5'
     MATRIX_RUBY_VERSION: '2.4'
 
-.pup_5_5_20: &pup_5_5_20
-  image: 'ruby:2.4'
-  variables:
-    PUPPET_VERSION: '5.5.20'
-    BEAKER_PUPPET_COLLECTION: 'puppet5'
-    MATRIX_RUBY_VERSION: '2.4'
-
 .pup_6: &pup_6
   image: 'ruby:2.5'
   variables:
@@ -220,6 +215,13 @@ variables:
   variables:
     PUPPET_VERSION: '6.18.0'
     BEAKER_PUPPET_COLLECTION: 'puppet6'
+    MATRIX_RUBY_VERSION: '2.5'
+
+.pup_7: &pup_7
+  image: 'ruby:2.5'
+  variables:
+    PUPPET_VERSION: '~> 7.0'
+    BEAKER_PUPPET_COLLECTION: 'puppet7'
     MATRIX_RUBY_VERSION: '2.5'
 
 # Testing Environments
@@ -283,6 +285,10 @@ pup6-lint:
   <<: *pup_6
   <<: *lint_tests
 
+pup7-lint:
+  <<: *pup_7
+  <<: *lint_tests
+
 # Unit Tests
 #-----------------------------------------------------------------------
 
@@ -290,10 +296,6 @@ pup5-unit:
   <<: *pup_5
   <<: *unit_tests
   <<: *with_SIMP_SPEC_MATRIX_LEVEL_2
-
-pup5.5.20-unit:
-  <<: *pup_5_5_20
-  <<: *unit_tests
 
 pup6-unit:
   <<: *pup_6
@@ -303,6 +305,11 @@ pup6-unit:
 pup6.18.0-unit:
   <<: *pup_6_18_0
   <<: *unit_tests
+
+pup7-unit:
+  <<: *pup_7
+  <<: *unit_tests
+  <<: *with_SIMP_SPEC_MATRIX_LEVEL_2
 
 # ------------------------------------------------------------------------------
 #             NOTICE: **This file is maintained with puppetsync**
@@ -316,29 +323,23 @@ pup6.18.0-unit:
 
 # The acceptance tests turn FIPS on and off, so no BEAKER_fips=yes tests are
 # appropriate.
-pup5.5.20:
-  <<: *pup_5_5_20
+pup5:
+  <<: *pup_5
   <<: *acceptance_base
   script:
-    - 'bundle exec rake beaker:suites'
-
-pup5.5.20-oel:
-  <<: *pup_5_5_20
-  <<: *acceptance_base
-  script:
-    - 'bundle exec rake beaker:suites[default,oel]'
+    - 'bundle exec rake beaker:suites[default]'
 
 pup6:
   <<: *pup_6
   <<: *acceptance_base
   script:
-    - 'bundle exec rake beaker:suites'
+    - 'bundle exec rake beaker:suites[default]'
 
 pup6.18.0:
   <<: *pup_6_18_0
   <<: *acceptance_base
   script:
-    - 'bundle exec rake beaker:suites'
+    - 'bundle exec rake beaker:suites[default]'
 
 pup6.18.0-oel:
   <<: *pup_6_18_0
@@ -357,3 +358,9 @@ pup6.18.0-oel:
   <<: *acceptance_base
   script:
     - 'bundle exec rake beaker:suites[default,oel]'
+
+pup7:
+  <<: *pup_7
+  <<: *acceptance_base
+  script:
+    - 'bundle exec rake beaker:suites[default]'
