@@ -5,6 +5,8 @@
   - Try to call fips-mode-setup (EL8+) before falling back to the raw dracut
     command
   - Fixed the acceptance test fact checks
+- Changed:
+  - Added Puppet 7 support
 
 * Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.4
 - Removed EL6 support
